--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,27 @@ buildscript {
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        classpath group: 'pl.allegro.tech.build', name: 'axion-release-plugin', version: '1.13.6'
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
-apply plugin: 'eclipse'
+apply plugin: 'pl.allegro.tech.build.axion-release'
 apply plugin: 'maven-publish'
 
+scmVersion {
+    tag {
+        prefix = '1.16.5-'
+    }
+    repository {
+        directory = project.projectDir // repository location
+    }
+    versionCreator = { version, _ -> '1.16.5-' + version }
+}
 
-version = "1.16.5-1.1.0"
-group = "com.teampolymer"
+version = scmVersion.version
+//version = "1.16.5-1.1.0"
+group = "com.github.teampolymer"
 archivesBaseName = 'polymer-hinge'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
@@ -34,7 +45,7 @@ minecraft {
     // Simply re-run your setup task after changing the mappings to update your workspace.
     mappings channel: 'official', version: '1.16.5'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-    
+
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     // Default run configurations.
@@ -144,32 +155,27 @@ dependencies {
 jar {
     manifest {
         attributes([
-            "Specification-Title": "polymer-hinge",
-            "Specification-Vendor": "Polymer Team",
-            "Specification-Version": "1", // We are version 1 of ourselves
-            "Implementation-Title": project.name,
-            "Implementation-Version": "${project.version}",
-            "Implementation-Vendor" :"WarmthDawn",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                "Specification-Title"     : "polymer-hinge",
+                "Specification-Vendor"    : "Polymer Team",
+                "Specification-Version"   : "1", // We are version 1 of ourselves
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : "${project.version}",
+                "Implementation-Vendor"   : "WarmthDawn",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
 }
 
-// Example configuration to allow publishing using the maven-publish task
-// This is the preferred method to reobfuscate your jar file
-jar.finalizedBy('reobfJar') 
-// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
-//publish.dependsOn('reobfJar')
+if (project == project.rootProject) {
+    jar.finalizedBy('reobfJar')
+} else {
+    publish.finalizedBy('reobfJar')
+}
 
 publishing {
     publications {
         mavenJava(MavenPublication) {
             artifact jar
-        }
-    }
-    repositories {
-        maven {
-            url "file:///${rootProject.projectDir}/mcmodsrepo"
         }
     }
 }
