:heavy_plus_sign: 添加core模块依赖

--- a/build.gradle
+++ b/build.gradle
@@ -131,6 +131,8 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.16.5-36.2.20'
 
+    implementation fg.deobf("com.github.teampolymer:polymer-core:latest")
+
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
