:recycle: 将部分代码移动到hinge模块

--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,14 @@ buildscript {
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
         classpath group: 'pl.allegro.tech.build', name: 'axion-release-plugin', version: '1.13.6'
+        classpath 'org.spongepowered:mixingradle:0.7.+'
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'pl.allegro.tech.build.axion-release'
 apply plugin: 'maven-publish'
+apply plugin: 'org.spongepowered.mixin'
 
 scmVersion {
     tag {
@@ -46,7 +48,7 @@ minecraft {
     mappings channel: 'official', version: '1.16.5'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
-    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+    accessTransformer = file('src/main/resources/META-INF/polymer_at.cfg')
 
     // Default run configurations.
     // These can be tweaked, removed, or duplicated as needed.
@@ -65,6 +67,9 @@ minecraft {
             // You can set various levels here.
             // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
             property 'forge.logging.console.level', 'debug'
+            // Allow dependent mixins to run
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
 
             mods {
                 'polymer-hinge' {
@@ -87,6 +92,9 @@ minecraft {
             // You can set various levels here.
             // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
             property 'forge.logging.console.level', 'debug'
+            // Allow dependent mixins to run
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
 
             mods {
                 'polymer-hinge' {
@@ -109,6 +117,9 @@ minecraft {
             // You can set various levels here.
             // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
             property 'forge.logging.console.level', 'debug'
+            // Allow dependent mixins to run
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
 
             // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
             args '--mod', 'polymer-hinge', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
@@ -130,6 +141,7 @@ dependencies {
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.16.5-36.2.20'
+    implementation 'org.jetbrains:annotations:23.0.0'
 
     implementation fg.deobf("com.github.teampolymer:polymer-core:latest")
 
@@ -151,6 +163,13 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
+}
+
+
+mixin {
+    // MixinGradle Settings
+    add sourceSets.main, "mixins.polymer-hinge.refmap.json"
+    config "mixins.polymer-hinge.json"
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
